# harmony-trajectory-subsetter

./: .git-blame-ignore-revs  .gitignore  CHANGE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  VERSION  environment.yaml
.github/: pull_request_template.md
.github/workflows/: publish_docker_image.yml  run_tests.yml  run_tests_on_pull_requests.yml
DataAccess/Scripts/: Coordinate.py  EcDlDaSubsetterMkcfg  GenAscii.py  GeoTIFFToHDFEOS5.py  GeoTIFFToNetCDF.py  H5ToNetCDF.py  H5ToShapefile.py  ICESat2ToolAdapter.py  Logging_3.py  ParameterHandling.py  ParameterHandling_3.py  SmapToGeoTIFF.py  SmapToHDFEOS5.py  SmapToNetCDF.py  SmapToolAdapter.py  SpatialSubsetGeoTIFF.py  SubsetDataLayers_3.py  SubsetterConfig.json
DataAccess/util/subsetter/: CMakeLists.txt  ForwardReferenceCoordinates.h  GeoPolygon.h  Makefile  ReferenceDatasets.h  SubsetDataLayers.h  geotiff_converter.h  makeit
docker/: Dockerfile  build_subset.sh  service.Dockerfile  subset_c7.Dockerfile  tests.Dockerfile
docs/: EGY.geo.json  TS_sequence_diagram.md  TrajSubrConfig.md  TrajectorySubsetter.ipynb
docs/archive/: TrajSubrConfig.docx  Trajectory+Subsetter+Configuration.doc
harmony_service/: adapter.py  exceptions.py  history.py  pip_requirements.txt  subsetter_config.json  utilities.py
harmony_service/config/: trajectorysubsetter_varinfo_config.json  trajectorysubsetter_varinfo_config.yml
sdps_local_development/: HE5_GctpFunc.h  environment.yaml  libGctp.la
subsetter/: Configuration.h  Coordinate.h  DatasetLinks.h  DimensionScales.h  ForwardReferenceCoordinates.h  FwdRefBeginDataset.h  GeoPolygon.h  HeightSegmentCoordinates.h  IcesatSubsetter.h  IndexSelection.h  LogLevel.h  Makefile  PhotonReferenceDatasets.h  ProcessArguments.cpp  ProcessArguments.h  ReferenceDatasets.h  ReverseReferenceCoordinates.h  RvsRefDatasets.h  Subset.cpp  SubsetDataLayers.h  Subsetter.h  SuperGroupCoordinate.h  SuperGroupSubsetter.h  Temporal.h  environment.yaml  geobox.h  geotiff_converter.h  makeit  makeit_harmony  makeit_local_conda  makeit_sdps
tests/: conftest.py  pip_test_requirements.txt  run_tests.sh  test_code_format.py
tests/data/: ATL03_gt1l.h5  ATL03_index_begin.h5  ATL03_indexbegin_start_end_FVs.h5  NorthPoleSmall.geojson  README.md  box.geo.json  variable_subset_ATL24_data.h5  variable_subset_ATL24_no_data.h5
tests/unit/: UutIndexSelection.cpp  UutIndexSelection.md  test_adapter.py  test_history.py  test_utilities.py
tests/unit/gtest/: .gitignore  CMakeLists.txt  IndexSelection_test.cpp  gtest_utilities.cpp  gtest_utilities.h  test_ATL10_v005_Configuration.cpp  test_ATL10_v006_Configuration.cpp  test_ForwardReferenceCoordinates.cpp  test_IndexSelection.cpp  test_LogLevel.cpp  test_ProcessArguments.cpp  test_Subsetter.cpp  test_Temporal.cpp
